@@ -118,6 +118,9 @@ public:
     // Sets the background color for the viewport.
     WEBKIT_EXPORT void setBackgroundColor(WebColor);
 
+    // Sets the background transparency for the viewport. The default is 'false'.
+    WEBKIT_EXPORT void setHasTransparentBackground(bool);
+
     // Sets whether this view is visible. In threaded mode, a view that is not visible will not
     // composite or trigger updateAnimations() or layout() calls until it becomes visible.
     WEBKIT_EXPORT void setVisible(bool);
