@@ -1,3 +1,15 @@
+2012-06-08  David Reveman  <reveman@chromium.org>
+
+        [Chromium] Compositor doesn't support translucent root layers.
+        https://bugs.webkit.org/show_bug.cgi?id=87821
+
+        Reviewed by James Robinson.
+
+        * chromium/public/WebLayer.h:
+        (WebLayer):
+        * chromium/public/WebLayerTreeView.h:
+        (WebLayerTreeView):
+
 2012-06-06  Mark Pilgrim  <pilgrim@chromium.org>
 
         [Chromium] Move createMessagePortChannel to Platform.h
